--- a/CSS/CSS_Practice/task2/style.css
+++ b/CSS/CSS_Practice/task2/style.css
@@ -1,18 +1,71 @@
 * {
   padding: 0;
   margin: 0;
+  font-family: "Arial", Times, serif;
 }
 .profile {
   width: 260px;
-  height: 638px;
+  height: fit-content;
   border: 1px solid black;
+  background-color: rgba(52, 73, 94);
 }
-img {
-  margin: 10px 20px 30px 22px;
+.imgs {
+  width: 260px;
+  height: 310px;
+  img {
+    margin-left: 25px;
+    margin-top: 20px;
+    margin-bottom: 15px;
+    width: 200px;
+    height: 200px;
+    border: 5px solid black;
+    border-radius: 50%;
+    overflow: hidden;
+  }
+  h3 {
+    text-align: center;
+    color: rgba(212, 225, 233);
+  }
+  h5 {
+    text-align: center;
+    color: yellow;
+    margin-top: 10px;
+  }
+  hr {
+    margin-top: 10px;
+    margin-left: 25px;
+    margin-right: 25px;
+  }
+}
+.contactinfo {
   margin-top: 20px;
-  width: 200px;
-  height: 200px;
-  border: 5px solid black;
-  border-radius: 50%;
-  overflow: hidden;
+  margin-left: 25px;
+  h5 {
+    color: rgba(212, 225, 233);
+    margin-bottom: 20px;
+  }
+  i {
+    color: rgb(57, 57, 200);
+    font-size: medium;
+    margin-top: 10px;
+  }
+  #text {
+    color: rgb(163, 163, 163);
+  }
+  a {
+    text-decoration: none;
+    color: rgb(163, 163, 163);
+  }
+}
+.skills {
+  margin-top: 20px;
+  margin-left: 25px;
+  h5 {
+    color: rgba(212, 225, 233);
+    margin-bottom: 20px;
+  }
+  #s{
+    color: rgb(163, 163, 163);
+    padding: 5px;
+  }
 }
