--- a/CSS/CSS_Practice/task1/style.css
+++ b/CSS/CSS_Practice/task1/style.css
@@ -120,7 +120,11 @@ body {
     border: none;
   }
   i{
+    margin-left: 10px;
     color: grey;
+  }
+  hr{
+    width: 300px;
   }
 }
 .rcheckbox {
