--- a/calculator/style.css
+++ b/calculator/style.css
@@ -18,7 +18,7 @@ body {
     height: 50px;
     background-color: gainsboro;
   }
-  input[type="number"] {
+  input[type="text"] {
     font-size: 1.2em;
   }
 }
